tests/ui/imports/suggest-remove-issue-121315.stderr
error: unused import: `AsMut`
  --> $DIR/suggest-remove-issue-121315.rs:25:24
   |
LL |     use std::convert::{AsMut, Into};
   |                        ^^^^^
   |
note: the lint level is defined here
  --> $DIR/suggest-remove-issue-121315.rs:3:9
   |
LL | #![deny(unused_imports)]
   |         ^^^^^^^^^^^^^^

error: unused import: `From`
  --> $DIR/suggest-remove-issue-121315.rs:34:24
   |
LL |     use std::convert::{From, Infallible};
   |                        ^^^^

error: aborting due to 2 previous errors

